# TelegraML

./: Makefile  dune-project  telegraml.opam  telegraml.opam.template
src/: dune  telegramApi.ml  telegramApi.mli
