(library
 (name telegraml)
 (public_name telegraml)
 (wrapped false)
 (libraries
   lwt lwt.unix uri cohttp cohttp-lwt lwt_log
   cohttp-lwt-unix yojson batteries logs
   ppx_deriving.show ppx_deriving.enum
 )
 (preprocess
  (pps
    ppx_deriving.show
    ppx_deriving.enum
 ))
 (synopsis "Telegram Bot API bindings for OCaml"))
